# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/games/: calc_logic.py  even_logic.py  game_drive.py  gcd_logic.py  prime_logic.py  prog_logic.py  progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_prog.py  brain_progression.py
