[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Set of simple text games based on mathematic"
authors = ["mesto3  <mesto3@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.1",
    "Intended Audience :: Education"
]
license = "MIT"
repository = "https://github.com/valeryglass/python-project-49"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
